Use Instant in DTO

--- a/scm-webapp/pom.xml
+++ b/scm-webapp/pom.xml
@@ -107,7 +107,16 @@
       <artifactId>jackson-jaxrs-base</artifactId>
       <version>${jackson.version}</version>
     </dependency>
-    
+    <dependency>
+      <groupId>com.fasterxml.jackson.datatype</groupId>
+      <artifactId>jackson-datatype-jdk8</artifactId>
+      <version>${jackson.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.datatype</groupId>
+      <artifactId>jackson-datatype-jsr310</artifactId>
+      <version>${jackson.version}</version>
+    </dependency>
     <!-- rest api -->
     
     <dependency>
