--- a/scm-webapp/pom.xml
+++ b/scm-webapp/pom.xml
@@ -154,7 +154,12 @@
       <artifactId>resteasy-servlet-initializer</artifactId>
       <version>${resteasy.version}</version>
     </dependency>
-    
+    <dependency>
+      <groupId>de.otto.edison</groupId>
+      <artifactId>edison-hal</artifactId>
+      <version>2.0.0-m2</version>
+    </dependency>
+
     <!-- injection -->
 
     <dependency>
