Add json enricher and json field filter

--- a/scm-core/pom.xml
+++ b/scm-core/pom.xml
@@ -82,7 +82,17 @@
       <artifactId>javax.ws.rs-api</artifactId>
       <version>${jaxrs.version}</version>
     </dependency>
-    
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-core</artifactId>
+      <version>${jackson.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>${jackson.version}</version>
+    </dependency>
+
     <!-- event bus -->
     
     <dependency>
