--- a/pom.xml
+++ b/pom.xml
@@ -484,6 +484,7 @@
     
     <jaxrs.version>2.0.1</jaxrs.version>
     <jersey-client.version>1.19.4</jersey-client.version>
+    <jackson.version>2.8.6</jackson.version>
     <guice.version>4.0</guice.version>
     
     <!-- event bus -->
