--- a/scm-webapp/pom.xml
+++ b/scm-webapp/pom.xml
@@ -23,7 +23,7 @@
       <groupId>sonia.scm</groupId>
       <artifactId>scm-annotation-processor</artifactId>
       <version>2.0.0-SNAPSHOT</version>
-      <optional>true</optional>
+      <scope>provided</scope>
     </dependency>
     
     <dependency>
