--- a/scm-webapp/pom.xml
+++ b/scm-webapp/pom.xml
@@ -403,6 +403,20 @@
       <version>${org.mapstruct.version}</version>
       <scope>provided</scope>
     </dependency>
+
+    <!-- Validation -->
+
+    <dependency>
+      <groupId>javax.validation</groupId>
+      <artifactId>validation-api</artifactId>
+      <version>2.0.1.Final</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-validator</artifactId>
+      <version>6.0.10.Final</version>
+    </dependency>
   </dependencies>
 
   <build>
