--- a/scm-webapp/pom.xml
+++ b/scm-webapp/pom.xml
@@ -157,7 +157,7 @@
     <dependency>
       <groupId>de.otto.edison</groupId>
       <artifactId>edison-hal</artifactId>
-      <version>2.0.0-m2</version>
+      <version>2.0.0</version>
     </dependency>
 
     <!-- injection -->
