Format comment as a comment

--- a/pom.xml
+++ b/pom.xml
@@ -92,7 +92,7 @@
       </snapshots>
     </repository>
 
-    // TODO remove jitpack after edison hal bugfix
+    <!-- TODO remove jitpack after edison hal bugfix -->
     <repository>
       <id>jitpack</id>
       <url>https://jitpack.io</url>
