--- a/scm-core/pom.xml
+++ b/scm-core/pom.xml
@@ -69,9 +69,9 @@
     <!-- rest api -->
 
     <dependency>
-      <groupId>javax.ws.rs</groupId>
-      <artifactId>javax.ws.rs-api</artifactId>
-      <version>${jaxrs.version}</version>
+      <groupId>com.sun.jersey</groupId>
+      <artifactId>jersey-core</artifactId>
+      <version>${jersey.version}</version>
     </dependency>
 
     <!-- xml -->
