--- a/scm-webapp/src/main/webapp/WEB-INF/web.xml
+++ b/scm-webapp/src/main/webapp/WEB-INF/web.xml
@@ -40,7 +40,7 @@
     <display-name>SCM-Manager ${project.version}</display-name>
 
     <listener>
-      <listener-class>sonia.scm.boot.BootstrapContextListener</listener-class>
+      <listener-class>sonia.scm.boot.BootstrapListener</listener-class>
     </listener>
     
     <listener>
@@ -48,44 +48,14 @@
     </listener>
 
     <filter>
-        <filter-name>BootstrapFilter</filter-name>
-        <filter-class>sonia.scm.boot.BootstrapContextFilter</filter-class>
+        <filter-name>guiceFilter</filter-name>
+        <filter-class>sonia.scm.boot.BootstrapFilter</filter-class>
     </filter>
 
     <filter-mapping>
-        <filter-name>BootstrapFilter</filter-name>
+        <filter-name>guiceFilter</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
-
-  <!-- rest -->
-  
-  <context-param>
-    <param-name>resteasy.servlet.mapping.prefix</param-name>
-    <param-value>/api/rest</param-value>
-  </context-param>
-
-  <servlet>
-    <servlet-name>Resteasy</servlet-name>
-    <servlet-class>
-      org.jboss.resteasy.plugins.server.servlet.HttpServletDispatcher
-    </servlet-class>
-  </servlet>
-
-  <servlet-mapping>
-    <servlet-name>Resteasy</servlet-name>
-    <url-pattern>/api/rest/*</url-pattern>
-  </servlet-mapping>
-  
-  <!-- capture sessions -->
-  <!-- 
-  TODO remove, we need no longer a session
-  -->
-  
-  <listener>
-    <listener-class>sonia.scm.HttpSessionListenerHolder</listener-class>
-  </listener>
-
-  <!-- basic configuration -->
 
     <welcome-file-list>
         <welcome-file>index.html</welcome-file>
