--- a/scm-webapp/pom.xml
+++ b/scm-webapp/pom.xml
@@ -405,19 +405,6 @@
       <scope>provided</scope>
     </dependency>
 
-    <!-- Validation -->
-
-    <dependency>
-      <groupId>javax.validation</groupId>
-      <artifactId>validation-api</artifactId>
-      <version>2.0.1.Final</version>
-    </dependency>
-
-    <dependency>
-      <groupId>org.hibernate</groupId>
-      <artifactId>hibernate-validator</artifactId>
-      <version>6.0.10.Final</version>
-    </dependency>
   </dependencies>
 
   <build>
@@ -871,13 +858,18 @@
               <dependency>
                 <groupId>com.webcohesion.enunciate</groupId>
                 <artifactId>enunciate-top</artifactId>
-                <version>2.9.1</version>
+                <version>${enunciate.version}</version>
                 <exclusions>
                   <exclusion>
                     <groupId>com.webcohesion.enunciate</groupId>
                     <artifactId>enunciate-swagger</artifactId>
                   </exclusion>
                 </exclusions>
+              </dependency>
+              <dependency>
+                <groupId>com.webcohesion.enunciate</groupId>
+                <artifactId>enunciate-lombok</artifactId>
+                <version>${enunciate.version}</version>
               </dependency>
             </dependencies>
           </plugin>
