--- a/scm-webapp/pom.xml
+++ b/scm-webapp/pom.xml
@@ -154,11 +154,11 @@
       <artifactId>resteasy-servlet-initializer</artifactId>
       <version>${resteasy.version}</version>
     </dependency>
-    <!-- TODO switch back to de.otto.edison after edison hal bugfix -->
+
     <dependency>
-      <groupId>com.github.pfeuffer</groupId>
+      <groupId>de.otto.edison</groupId>
       <artifactId>edison-hal</artifactId>
-      <version>jetpack-SNAPSHOT</version>
+      <version>2.0.1</version>
     </dependency>
 
     <!-- injection -->
