initial import for scm ui

--- a/.hgignore
+++ b/.hgignore
@@ -30,7 +30,8 @@ Desktop DF$
 rebel.xml
 \.pyc
 # ui
-scm-ui/node_modules/
+scm-ui/node_modules
 scm-ui/yarn.lock
 scm-ui/.gitignore
 scm-ui/package-lock.json
+node_modules
