Removed flow from yarn test

--- a/scm-ui/package.json
+++ b/scm-ui/package.json
@@ -22,7 +22,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "yarn flow && jest",
+    "test": "jest",
     "eject": "react-scripts eject",
     "flow": "flow"
   },
