--- a/scm-ui/package.json
+++ b/scm-ui/package.json
@@ -32,7 +32,10 @@
     }
   },
   "devDependencies": {
-    "prettier": "^1.13.7"
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
+    "prettier": "^1.13.7",
+    "react-test-renderer": "^16.4.1"
   },
   "babel": {
     "presets": [
