--- a/scm-ui/package.json
+++ b/scm-ui/package.json
@@ -5,7 +5,6 @@
   "private": true,
   "dependencies": {
     "classnames": "^2.2.5",
-    "flow-bin": "^0.75.0",
     "history": "^4.7.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
@@ -34,6 +33,8 @@
   "devDependencies": {
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
+    "flow-bin": "^0.75.0",
+    "flow-typed": "^2.5.1",
     "prettier": "^1.13.7",
     "react-test-renderer": "^16.4.1"
   },
