--- a/scm-ui/package.json
+++ b/scm-ui/package.json
@@ -4,6 +4,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bulma": "^0.7.1",
     "classnames": "^2.2.5",
     "history": "^4.7.2",
     "react": "^16.4.1",
@@ -19,8 +20,12 @@
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build-css": "node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/",
+    "watch-css": "npm run build-css && node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/ --watch --recursive",
+    "start-js": "react-scripts start",
+    "start": "npm-run-all -p watch-css start-js",
+    "build-js": "react-scripts build",
+    "build": "npm-run-all build-css build-js",
     "test": "jest",
     "eject": "react-scripts eject",
     "flow": "flow"
@@ -35,6 +40,8 @@
     "enzyme-adapter-react-16": "^1.1.1",
     "flow-bin": "^0.75.0",
     "flow-typed": "^2.5.1",
+    "node-sass-chokidar": "^1.3.0",
+    "npm-run-all": "^4.1.3",
     "prettier": "^1.13.7",
     "react-test-renderer": "^16.4.1"
   },
