--- a/scm-ui/package.json
+++ b/scm-ui/package.json
@@ -38,12 +38,14 @@
   "devDependencies": {
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
+    "fetch-mock": "^6.5.0",
     "flow-bin": "^0.75.0",
     "flow-typed": "^2.5.1",
     "node-sass-chokidar": "^1.3.0",
     "npm-run-all": "^4.1.3",
     "prettier": "^1.13.7",
-    "react-test-renderer": "^16.4.1"
+    "react-test-renderer": "^16.4.1",
+    "redux-mock-store": "^1.5.3"
   },
   "babel": {
     "presets": [
