--- a/scm-ui/pom.xml
+++ b/scm-ui/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
   <modelVersion>4.0.0</modelVersion>
 
@@ -15,4 +16,45 @@
   <version>2.0.0-SNAPSHOT</version>
   <name>scm-ui</name>
 
+  <build>
+    <plugins>
+
+      <plugin>
+        <groupId>com.github.sdorra</groupId>
+        <artifactId>buildfrontend-maven-plugin</artifactId>
+        <version>2.0.1</version>
+        <configuration>
+          <node>
+            <version>8.11.3</version>
+          </node>
+          <pkgManager>
+            <type>YARN</type>
+            <version>1.3.2</version>
+          </pkgManager>
+          <script>run</script>
+        </configuration>
+        <executions>
+          <execution>
+            <id>install</id>
+            <phase>process-resources</phase>
+            <goals>
+              <goal>install</goal>
+            </goals>
+          </execution>
+          <execution>
+            <id>build</id>
+            <phase>compile</phase>
+            <goals>
+              <goal>run</goal>
+            </goals>
+            <configuration>
+              <script>build</script>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+
+
+    </plugins>
+  </build>
 </project>
