--- a/pom.xml
+++ b/pom.xml
@@ -492,6 +492,7 @@
     <jersey-client.version>1.19.4</jersey-client.version>
     <jackson.version>2.8.6</jackson.version>
     <guice.version>4.0</guice.version>
+    <resteasy.version>3.1.3.Final</resteasy.version>
     
     <!-- event bus -->
     <legman.version>1.2.0</legman.version>
