--- a/scm-ui/.vscode/settings.json
+++ b/scm-ui/.vscode/settings.json
@@ -4,7 +4,7 @@
   "editor.formatOnSave": false,
   // Enable per-language
   "[javascript]": {
-      "editor.formatOnSave": false
+      "editor.formatOnSave": true
   },
   "flow.pathToFlow": "${workspaceRoot}/node_modules/.bin/flow"
 }
