update shiro-unit to 1.0.1

--- a/scm-test/pom.xml
+++ b/scm-test/pom.xml
@@ -33,11 +33,11 @@
       <artifactId>junit</artifactId>
       <version>${junit.version}</version>
     </dependency>
-    
+
     <dependency>
       <groupId>com.github.sdorra</groupId>
       <artifactId>shiro-unit</artifactId>
-      <version>1.0.0</version>
+      <scope>test</scope>
     </dependency>
 
     <dependency>
