--- a/scm-ui/pom.xml
+++ b/scm-ui/pom.xml
@@ -29,7 +29,7 @@
           </node>
           <pkgManager>
             <type>YARN</type>
-            <version>1.3.2</version>
+            <version>1.7.0</version>
           </pkgManager>
           <script>run</script>
         </configuration>
@@ -49,6 +49,16 @@
             </goals>
             <configuration>
               <script>build</script>
+            </configuration>
+          </execution>
+          <execution>
+            <id>test</id>
+            <phase>test</phase>
+            <goals>
+              <goal>run</goal>
+            </goals>
+            <configuration>
+              <script>test-coverage</script>
             </configuration>
           </execution>
         </executions>
