--- a/scm-ui/package.json
+++ b/scm-ui/package.json
@@ -27,8 +27,8 @@
     "build-js": "react-scripts build",
     "build": "npm-run-all build-css build-js",
     "test": "jest",
-    "test-coverage": "yarn run test --coverage",
-    "test-ci": "yarn run test --ci --coverage",
+    "test-coverage": "jest --coverage",
+    "test-ci": "jest --ci --coverage",
     "eject": "react-scripts eject",
     "flow": "flow"
   },
