add pre-commit script with eslint and flow

--- a/scm-ui/package.json
+++ b/scm-ui/package.json
@@ -34,7 +34,8 @@
     "test-coverage": "jest --coverage",
     "test-ci": "jest --ci --coverage",
     "eject": "react-scripts eject",
-    "flow": "flow"
+    "flow": "flow",
+    "pre-commit": "flow && eslint src"
   },
   "proxy": {
     "/scm/api": {
