--- a/scm-ui/package.json
+++ b/scm-ui/package.json
@@ -35,7 +35,7 @@
     "test-ci": "jest --ci --coverage",
     "eject": "react-scripts eject",
     "flow": "flow",
-    "pre-commit": "flow && eslint src"
+    "pre-commit": "jest && flow && eslint src"
   },
   "proxy": {
     "/scm/api": {
