--- a/scm-core/pom.xml
+++ b/scm-core/pom.xml
@@ -131,12 +131,12 @@
 
     <!-- TODO replace by proper version from maven central (group: com.github.sdorra) once its there. -->
     <dependency>
-      <groupId>com.github.schnatterer.shiro-static-permissions</groupId>
+      <groupId>com.github.sdorra.shiro-static-permissions</groupId>
       <artifactId>ssp-lib</artifactId>
     </dependency>
 
     <dependency>
-      <groupId>com.github.schnatterer.shiro-static-permissions</groupId>
+      <groupId>com.github.sdorra.shiro-static-permissions</groupId>
       <artifactId>ssp-processor</artifactId>
       <optional>true</optional>
     </dependency>
