--- a/scm-ui/pom.xml
+++ b/scm-ui/pom.xml
@@ -68,6 +68,7 @@
             </goals>
             <configuration>
               <script>test-ci</script>
+              <skip>${skipTests}</skip>
             </configuration>
           </execution>
         </executions>
