Git Plugin Config: Create fine-grained configuration permissions.
No more hard-coded isAdmin() checks.
Also adds more tests.

--- a/scm-webapp/src/test/resources/sonia/scm/configuration/shiro.ini
+++ b/scm-webapp/src/test/resources/sonia/scm/configuration/shiro.ini
@@ -4,6 +4,6 @@ writeOnly = secret, writer
 readWrite = secret, readerWriter
 
 [roles]
-reader = configuration:read
-writer = configuration:write
-readerWriter = configuration:*
+reader = configuration:read:global
+writer = configuration:write:global
+readerWriter = configuration:*:global
